ontol/ontol-compiler/test-cases/error/rel/various_monadic_properties.on
def foo (
    rel .'a': text
)
// default foo 'a': 'default'

def bar (
    // a is either a text or not present
    rel .'maybe'?: text

    // bar and string may be related via b many times
    rel .'array': {text}

    // a is either a text or null
    rel bar 'nullable': text

    // FIXME: Should this work?
    rel .'nullable': () // ERROR union in named relationship is not supported yet. Make a union instead
)
